<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Activities.MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >

        <Button
            android:layout_width="match_parent"
            android:drawableLeft="@drawable/newfiche"
            android:drawablePadding="40dp"
            android:gravity="left|center_vertical"
            android:layout_height="100dp"
            android:textColor="@android:color/black"
            android:text="@string/bouton_nouvelle_fiche"
            android:onClick="launchNewFiche"/>


            <Button
                android:layout_height="100dp"
                android:drawableLeft="@drawable/consult"
                android:drawablePadding="40dp"
                android:gravity="left|center_vertical"
                android:layout_width="match_parent"
                android:textColor="@android:color/black"
                android:text="@string/bouton_consulter_fiche"
                android:onClick="launchListeFiche" />

        <Button
            android:layout_height="100dp"
            android:drawableLeft="@drawable/cloud"
            android:drawablePadding="40dp"
            android:gravity="left|center_vertical"
            android:layout_width="match_parent"
            android:textColor="@android:color/black"
            android:text="@string/bouton_consulter_fiche_distante"
            android:onClick="launchListeFicheDistant" />



    </LinearLayout>
</RelativeLayout>
