<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.NewFicheActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/done"
        android:onClick="recherche"
        app:fabSize="normal"
        app:backgroundTint="@color/green_floating" />


    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:minHeight="80dp"
                android:layout_marginTop="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/Criteres"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center"
                        android:id="@+id/NomFiche"
                        android:layout_alignParentTop="true"
                        android:textSize="22sp"
                        android:textAllCaps="true"
                        android:textStyle="bold" />


                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/recherche_nom_ville"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/Ville"
                        android:layout_alignParentTop="true"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/VilleEdit"
                        style="@style/MyEditTextstyle"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="5dp"
                        android:layout_below="@+id/Ville"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        />


                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/recherche_taille"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/Taille"
                        android:layout_alignParentTop="true"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:text="@string/entre"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/TailleEditMin"
                            style="@style/MyEditTextstyle"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="5dp"
                            android:inputType="number"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:text="@string/et"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/TailleEditMax"
                            style="@style/MyEditTextstyle"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="5dp"
                            android:inputType="number"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/recherche_nbpieces_min"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/Pieces"
                        android:layout_alignParentTop="true"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:text="@string/entre"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/PiecesEditMin"
                            style="@style/MyEditTextstyle"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="5dp"
                            android:inputType="number"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:text="@string/et"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/PiecesEditMax"
                            style="@style/MyEditTextstyle"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="5dp"
                            android:inputType="number"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/recherche_prix"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/Prix"
                        android:layout_alignParentTop="true"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:text="@string/entre"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/PrixEditMin"
                            style="@style/MyEditTextstyle"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="5dp"
                            android:inputType="number"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:text="@string/et"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/PrixEditMax"
                            style="@style/MyEditTextstyle"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="5dp"
                            android:inputType="number"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
